RESOLVED FIXED 207721
Validate scopeURL is valid when reading it from the database
https://bugs.webkit.org/show_bug.cgi?id=207721
Summary Validate scopeURL is valid when reading it from the database
youenn fablet
Reported 2020-02-13 14:33:42 PST
Validate scopeURL is valid when reading it from the database
Attachments
Patch (3.26 KB, patch)
2020-02-13 14:45 PST, youenn fablet
no flags
Patch for landing (3.34 KB, patch)
2020-02-17 08:33 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-02-13 14:45:43 PST
WebKit Commit Bot
Comment 2 2020-02-16 17:42:04 PST
Comment on attachment 390689 [details] Patch Rejecting attachment 390689 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 390689, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Traceback (most recent call last): File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 80, in <module> main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 75, in main WebKitPatch(os.path.abspath(__file__)).main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 305, in main result = command.check_arguments_and_execute(options, args, self) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 123, in check_arguments_and_execute return self.execute(options, args, tool) or 0 File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/abstractsequencedcommand.py", line 55, in execute self._sequence.run_and_handle_errors(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output: https://webkit-queues.webkit.org/results/13323663
Darin Adler
Comment 3 2020-02-16 18:10:42 PST
Comment on attachment 390689 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390689&action=review > Source/WebCore/ChangeLog:1 > + I think this blank line might have confused the commit queue.
youenn fablet
Comment 4 2020-02-17 08:33:31 PST
Created attachment 390921 [details] Patch for landing
WebKit Commit Bot
Comment 5 2020-02-17 10:54:51 PST
The commit-queue encountered the following flaky tests while processing attachment 390921 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2020-02-17 10:55:18 PST
The commit-queue encountered the following flaky tests while processing attachment 390921 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2020-02-17 12:42:25 PST
Comment on attachment 390921 [details] Patch for landing Clearing flags on attachment: 390921 Committed r256761: <https://trac.webkit.org/changeset/256761>
WebKit Commit Bot
Comment 8 2020-02-17 12:42:27 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2020-02-17 12:43:14 PST
Note You need to log in before you can comment on or make changes to this bug.