Validate scopeURL is valid when reading it from the database https://bugs.webkit.org/show_bug.cgi?id=207721

Reviewed by Darin Adler.

* workers/service/server/RegistrationDatabase.cpp:
(WebCore::RegistrationDatabase::importRecords):
In case scopeURL is not good, skip the registration, as done for other registration parameters.


Canonical link: https://commits.webkit.org/220820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256761 268f45cc-cd09-0410-ab3c-d52691b4dbfc